# High_Frequency_Backtester

./: .gitignore  CMakeLists.txt  README.md
cppmodules/: README.md  highfreqbacktester.cpp  highfreqbacktester.h  main.cpp  reporter.cpp  reporter.h  types.h
pythoncode/: README.md  extractob.py  extracttrades.py  merge.py  opendata.py  plot.py  readnpz.py
tests/: generate_synthetic.py  test_latency.cpp  test_latency.py
